--- a/src/components/router/index.marko
+++ b/src/components/router/index.marko
@@ -1,14 +1,46 @@
-<${state.component}/>
+<${state.component}></>
 
-import '../../router.client'
 import '../test'
 import '../notFound'
+import UniversalRouter from 'universal-router'
+
+import history from '../../history'
+
+static const router =  new UniversalRouter([
+  { path: '/test', action: (req) => ({ page: 'test', data: { req, action: 'test' } }) },
+  { path: '/sign-in', action: () => ({ page: 'login', data: { action: 'sign-in' } }) },
+  { path: '/sign-up', action: () => ({ page: 'login', data: { action: 'sign-up' } }) },
+  { path: '/sign-out', action: (req) => ({ page: 'home', data: { req, action: 'home', 'sign-out': true } }) },
+  { path: '/settings', action: () => ({ page: 'settings', data: { action: 'settings' } }) },
+  { path: '/', action: (req) => ({ page: 'home', data: { req, action: 'home' } }) },
+  { path: '/page/:page', action: (req) => ({ page: 'home', data: { req, action: 'home' } }) },
+  { path: '/feed', action: (req) => ({ page: 'home', data: { req, action: 'feed' } }) },
+  { path: '/feed/page/:page', action: (req) => ({ page: 'home', data: { req, action: 'feed' } }) },
+  { path: '/tags/:tag', action: (req) => ({ page: 'home', data: { req, action: 'tag' } }) },
+  { path: '/tags/:tag/page/:page', action: (req) => ({ page: 'home', data: { req, action: 'tag' } }) },
+  { path: '/article/:article', action: (req) => ({ page: 'article', data: { req, action: 'article' } }) },
+  { path: '/edit/:article', action: (req) => ({ page: 'editor', data: { req, action: 'edit' } }) },
+  { path: '/new-post', action: (req) => ({ page: 'editor', data: { req, action: 'new-post' } }) },
+  { path: '/author/:author', action: (req) => ({ page: 'profile', data: { req, action: 'author' } }) },
+  { path: '/author/:author/page/:page', action: (req) => ({ page: 'profile', data: { req, action: 'author' } }) },
+  { path: '/favorited/:author', action: (req) => ({ page: 'profile', data: { req, action: 'favorited' } }) },
+  { path: '/favorited/:author/page/:page', action: (req) => ({ page: 'profile', data: { req, action: 'favorited' } }) },
+  { path: '(.*)', action: () => ({ page: 'notFound', data: { action: 'not-found' } }) }
+])
+
 
 class {
   onCreate({ page }) {
-    console.log('++++++++++++', arguments)
     this.state = {
       component: require(`../${page}`)
     }
+    history.listen(this.render0.bind(this))
+  }
+
+  async render0({location}) {
+    alert(1)
+    const route = await router.resolve(location);
+    const component = require(`../${route.page}`);
+    this.state.component = component
   }
 }
