--- a/src/components/a-tag/index.marko
+++ b/src/components/a-tag/index.marko
@@ -1,8 +1,10 @@
 import history from '../../history'
 
-static function handleClick(e) {
-  e.preventDefault()
-  history.navigate(this.input.href)
-}
+<a on-click("handleClick") href=input.href><${input.renderBody}/></a>
 
-<a on-click(handleClick) href=input.href>123</a>
+class {
+  handleClick(e) {
+    e.preventDefault()
+    history.navigate(this.input.href)
+  }
+}
