router tag as root

--- a/src/components/home/index.marko
+++ b/src/components/home/index.marko
@@ -1,1 +1,14 @@
-<h1>UNI-Marko</h1>
+<h1>UNI-Marko ${input.test}</h1>
+
+class {
+  onCreate() {
+    console.log('on create home')
+  }
+  onMount() {
+    console.log('on mount home')
+  }
+  onDestroy() {
+    console.log('on destroy home')
+  }
+
+}
