--- a/src/components/layout/index.marko
+++ b/src/components/layout/index.marko
@@ -2,7 +2,7 @@
     <header>
       <nav>
         <a-tag href="/home">Home</a-tag> |
-        <a-tag href="/users">Users List</a-tag> |
+        <a-tag href="/user-list">Users List</a-tag> |
         <a-tag href="/room">Contact</a-tag>
       </nav>
     </header>
