--- a/src/components/router/index.marko
+++ b/src/components/router/index.marko
@@ -2,17 +2,14 @@
   <${state.component} data=state.data/>
 </layout>
 
-
-
 import history from '../../history'
-
 import router from '../../router'
 
 class {
-  onCreate({ page, data }) {
+  onCreate({ component, data }) {
     console.log('on create router')
     this.state = {
-      component: require(`../${page}/index.marko`),
+      component: component,
       data
     }
     history.listen(this.handle.bind(this))
@@ -21,6 +18,6 @@ class {
   async handle({location}) {
     const route = await router.resolve(location);
     this.state.data = route.data;
-    this.state.component = require(`../${route.page}/index.marko`);
+    this.state.component = route.component;
   }
 }
