--- a/src/pages/index.marko
+++ b/src/pages/index.marko
@@ -16,7 +16,7 @@
   <body>
     <sample-header title="Lasso + Express"/>
     <div class="container">
-      <router component=input.component data=input.data/>
+      <router page=input.page data=input.data/>
     </div>
     <lasso-body/>
     <!--
