--- a/src/pages/index.marko
+++ b/src/pages/index.marko
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Marko | Lasso + Express</title>
+    <title>Marko | Lasso + Express.js</title>
     <lasso-head/>
     <style>
       .container{
@@ -27,3 +27,6 @@
     <browser-refresh/>
   </body>
 </html>
+
+class {
+}
