--- a/src/components/router/index.marko
+++ b/src/components/router/index.marko
@@ -1,5 +1,5 @@
 <layout on-increment('dispatch', 'INCREMENT')>
-  <${state.component} store=store.getState() data=state.datam  />
+  <${state.component} store=store.getState() data=state.data  />
 </layout>
 
 import history from '../../history'
